[package]
name = "webber"
version = "0.1.0"
authors = ["Tim Süberkrüb <dev@timsueberkrueb.io"]
edition = "2018"
build = "src/build.rs"

[dependencies]
qmetaobject = { git = "https://github.com/woboq/qmetaobject-rs" }
cstr = "0.1"
cpp = "0.5"
url = "2.1"
reqwest = "0.9"
scraper = "0.11"
ar = "0.8"
xdg = "2.2"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
blake2 = "0.8"
gettext-rs = "0.4"

[build-dependencies]
cpp_build = "0.5"
